--- a/app/src/main/res/layout/fragment_alphabets.xml
+++ b/app/src/main/res/layout/fragment_alphabets.xml
@@ -7,12 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".fragments.TranslateFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"
         android:text="Avatar"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/videoView"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/buttonNext"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_right_arrow" />
+
+        <ImageButton
+            android:id="@+id/buttonStop"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_stop" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +49,9 @@
             android:id="@+id/editTextInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:hint="Enter alphabet"
+            android:maxLength="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,12 +64,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Translate" />
-
-            <Button
-                android:id="@+id/buttonSpeak"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Speak" />
 
         </LinearLayout>
 
