--- a/app/src/main/res/layout/fragment_alphabets.xml
+++ b/app/src/main/res/layout/fragment_alphabets.xml
@@ -50,8 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Enter alphabet"
-            android:maxLength="1" />
+            android:hint="Enter alphabet" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,5 +67,11 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
