--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -46,5 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="180dp" />
+
 
 </LinearLayout>
