--- a/app/src/main/res/layout/fragment_alphabets.xml
+++ b/app/src/main/res/layout/fragment_alphabets.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.TranslateFragment">
 
-    <VideoView
-        android:id="@+id/videoView"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="150dp"
         android:text="Avatar"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />
 
@@ -19,23 +19,10 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/videoView"
+        android:layout_below="@id/listView"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/buttonNext"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_right_arrow" />
-
-        <ImageButton
-            android:id="@+id/buttonStop"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_stop" />
 
     </LinearLayout>
 
